--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker: Criando Containers sem Dor de Cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introdução a Orquestração de Containers</li>
     </ul>
 </body>
 </html>
