--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gerenciando Máquinas Virtuais</li>
         <li>Docker: Criando Containers sem Dor de Cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: Sua Infraestrutura como Código</li>
         <li>Integração Contínua</li>
         <li>Kubernetes: Introdução a Orquestração de Containers</li>
     </ul>
